@@ -102,6 +102,7 @@ NUKE
 OEMIT
 OFF
 ON
+OPAQUE
 OUTSIDE
 OVERRIDE
 PAGING
