@@ -104,6 +104,7 @@ SWITCH_VALUE switch_list[] = {
   {"OEMIT", SWITCH_OEMIT},
   {"OFF", SWITCH_OFF},
   {"ON", SWITCH_ON},
+  {"OPAQUE", SWITCH_OPAQUE},
   {"OUTSIDE", SWITCH_OUTSIDE},
   {"OVERRIDE", SWITCH_OVERRIDE},
   {"PAGING", SWITCH_PAGING},
